--- a/styles.css
+++ b/styles.css
@@ -17,14 +17,16 @@ h2{
    font-size: 50px;
 }
 
-a{
+.footer a{
     display: flex;
     justify-content: center; 
     font-size: 40px;
     padding: 0 15px;
 }
 
-
+html{
+    height: 100%;
+}
 body {
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
@@ -33,6 +35,79 @@ body {
     
 }
 
+.container1{
+    display: grid;
+    gap: 10px;
+    grid-template-areas: 
+    "header"
+    "main"
+    "footer";
+}
+
+.header{
+    grid-area: header;
+}
+
+.main{
+    grid-area: main;
+    display: flex;
+    justify-content: center;
+}
+.footer{
+    grid-area: footer;
+}
+
+.container{
+    width: 100%;
+    max-width: 1100px;
+    margin: auto;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 250px;
+    grid-gap: 20px;
+}
+.container .box-img figure{
+    width: 100%;
+    height: 100%;
+}
+
+.container .box-img img{
+    width: 100%;
+    height: 100%;
+    
+}
+.container .box-img:nth-child(1){
+    grid-column-start: span 2;
+}
+
+.container .box-img:nth-child(4){
+    grid-row-start: span 2;
+}
+
+@media screen and (max-width:800px) {
+    .container{
+        width: 95%;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 10px;
+        grid-template-rows: 200px;
+    }
+    .container .box-img:nth-child(1){
+        grid-column-start: span 1;
+    }
+}
+
+@media screen and (max-width:500px) {
+    .container{
+        width: 90%;
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .container .box-img img{
+        height: 200px;
+    }
+} 
+
 #menu{
     position: absolute;
     bottom: 0;
@@ -40,7 +115,7 @@ body {
    
 }
 
-.centrar{
+ .centrar{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -48,18 +123,16 @@ body {
 }
 
 .galeria img{
-    width: 675px;
-    height: 1200px;
+    width: 720px;
+    height: 1280px;
     color: #fff;
     font-size: 40px;
     text-decoration: none;
     margin:  0 10px;
     
-
-}
+} 
   
-
-.gallery-container{
+.container{
 display: grid;
 grid-template-columns: repeat(3, 1fp);
 grid-template-rows: 150px;
@@ -72,8 +145,8 @@ grid-gap: 20px;
 }
 
 .gallery__imagenes{
-    width: 675px;
-    height: 1200px
+    width: 720px;
+    height: 1280px
     object-fit cover;
     max-width: 100%;
     border: 7px solid #fff;
@@ -82,7 +155,7 @@ grid-gap: 20px;
 .gallery__title{
    position: absolute; 
    bottom: 0;
-}
+} 
 
 
 
@@ -97,7 +170,7 @@ grid-column-start: span 3;
 }
 .gallery__item:nth-child(3){
 grid-column-start: span 4;
-}    */
+}     */
 
 @keyframes gradient {
     0% {
