--- a/styles.css
+++ b/styles.css
@@ -6,14 +6,14 @@
 h1{
     display: flex;
     justify-content: center;
-    font-family: Vladimir Script;
+    font-family: Dancing Script, serif;
     font-size: 80px;
 }
 
 h2{
    display: flex;
    justify-content: center;
-   font-family: Baskerville Old Face;
+   font-family: Abril Fatface;
    font-size: 50px;
 }
 
@@ -32,7 +32,7 @@ body {
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     height: 100vh;
-    
+
 }
 
 .container1{
